added style link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <title>BEARly Speaking | Devdutt Shenoi</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="description" content="Welcome to my blog folks. This is where the talking is done!">
- <link rel="stylesheet" href="/site.css">
+ <link rel="stylesheet" href="site.css">
 </head>
 <body>
 <ul class="topnav" id="myTopnav">
