--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
- <title>BEARly Speaking | Devdutt Shenoi</title>
+ <title>BEARly | Devdutt Shenoi</title>
+ <meta type="description" content="I write code, I write blogs and I write a lot!">
+ <meta name="keywords" content="Web Development, Javascript, HTML, CSS, Github">
+ <meta name="author" content="Devdutt Shenoi">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <meta name="description" content="Welcome to my blog folks. This is where the talking is done!">
- <link rel="stylesheet" href="site.css">
+ <link rel="stylesheet" type="text/css" href="theme.css">
 </head>
 <body>
+
 <ul class="topnav" id="myTopnav">
   <li><a href="http://devdutt.ga">Home</a></li>
-  <li><a href="#">Blog</a></li>
-  <li><a href="http://devdutt.ga/about.html">About</a></li>
+  <li><a class="active" href="#">Blog</a></li>
+  <li><a href="#about">About</a></li>
   <li class="icon">
-    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+    <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
   </li>
 </ul>
+
+<div style="padding-left:16px">
+ Hey there, I am building it, this is coming up soon!
+</div>
+
 <script>
 function myFunction() {
     var x = document.getElementById("myTopnav");
@@ -25,5 +33,7 @@ function myFunction() {
     }
 }
 </script>
+
 </body>
 </html>
+
