--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
  <meta name="author" content="Devdutt Shenoi">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" type="text/css" href="theme.css">
+ <link rel="stylesheet" type="text/css" href="http://devdutt.ga/site.css">
 </head>
 <body>
-
+<header class=header>
+    <div class=row>
+        <div class="columns small-12">
+            <a href=. class=logo><img alt="logo image" src=images/photo.jpg> <span>devdutt Shenoi</span> </a><a href="http://medium.com/@devduttshenoi" class="radius super-script"> Blog</a>
+            <p class=tagline>Co-founder & Developer @<a href="http://vimag.vv.si"> V!</a></div>
+    </div>
+</header>
 <ul class="topnav" id="myTopnav">
   <li><a href="http://devdutt.ga">Home</a></li>
   <li><a class="active" href="#">Blog</a></li>
