--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
 <header class=header>
     <div class=row>
         <div class="columns small-12">
-            <a href=. class=logo><img alt="logo image" src=images/photo.jpg> <span>devdutt Shenoi</span> </a><a href="http://medium.com/@devduttshenoi" class="radius super-script"> Blog</a>
+            <a href=. class=logo><img alt="logo image" src="http://devdutt.ga/images/photo.jpg"> <span>devdutt Shenoi</span> </a><a href="#" class="radius super-script"> Blog</a>
             <p class=tagline>Co-founder & Developer @<a href="http://vimag.vv.si"> V!</a></div>
     </div>
 </header>
 <ul class="topnav" id="myTopnav">
-  <li><a href="http://devdutt.ga">Home</a></li>
-  <li><a class="active" href="#">Blog</a></li>
-  <li><a href="#about">About</a></li>
+  <li><a class="active" href="#">Home</a></li>
+  <li><a href="#about">About me</a></li>
   <li class="icon">
     <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">☰</a>
   </li>
