--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <meta name="keywords" content="Web Development, Javascript, HTML, CSS, Github">
  <meta name="author" content="Devdutt Shenoi">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" type="text/css" href="theme.css">
+ <link rel="stylesheet" type="text/css" href="site.css">
  <link rel="stylesheet" type="text/css" href="http://devdutt.ga/site.css">
 </head>
 <body>
