--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class=header>
     <div class=row>
         <div class="columns small-12">
-            <a href=. class=logo><a href="http://devdutt.ga"><img alt="logo image" src="http://devdutt.ga/images/photo.jpg"></a> <span>devdutt Shenoi</span> </a><a href="#" class="radius super-script"> Blog</a>
+            <a href="http://devdutt.ga" class=logo><img alt="logo image" src="http://devdutt.ga/images/photo.jpg"> <span>devdutt Shenoi</span> </a><a href="#" class="radius super-script"> Blog</a>
             <p class=tagline>Co-founder & Developer @<a href="http://vimag.vv.si"> V!</a></div>
     </div>
 </header>
