--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<div>
 						<span class="fh5co-post-date">October 28, 2016</span>
 						<h2><a href="articles\cpp_chatbot.html">How to build a Chatbot in C++</a></h2>
-						<p>What my love for AI and the Computer Science sylabus in my school built</p>
+						<p>Mixing my love for AI and the CS sylabus in school</p>
 					</div>
 				</div>
 				<footer>
