--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	<div class="fh5co-loader"></div>
 
 	<div id="page">
-		<div id="fh5co-aside" style="background-image: url(http://devdutt.ga/images/photo.jpg)">
+		<div id="fh5co-aside" style="background-image: url(images/cover.jpg)">
 			<div class="overlay"></div>
 			<nav role="navigation">
 				<ul>
