--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
+	<!--Favicons-->
+	<link href=http://devdutt.ga/images/favicon-32x32.png rel=icon sizes=32x32 type=image/png>
+  <link href=http://devdutt.ga/images/favicon-16x16.png rel=icon sizes=16x16 type=image/png>
 
+  <!--Google Font-->
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
