--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<img src="images/acpng.jpg" alt="Building a C++ Application to cheat the readings">
 					<div>
 						<span class="fh5co-post-date">July 16, 2016</span>
-						<h2><a href="articles\AC_Sonometer.html">Building a C++ Application to cheat the readings</a></h2>
+						<h2><a href="articles\ac_sonometer.html">Building a C++ Application to cheat the readings</a></h2>
 						<p>Breakneck speed programming and the law breaker</p>
 					</div>
 				</div>
