--- a/index.html
+++ b/index.html
@@ -6,24 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>BEARly Speaking | With Devdutt Shenoi</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="My blog on anythihng thing that catches my imagination, in the coding world and some..." />
+	<meta name="description" content="My blog on anything that catches my imagination, in the coding world and some..." />
 	<meta name="keywords" content="Devdutt Shenoi, bearly speaking, coding, tutorials, web development" />
 	<meta name="author" content="Devdutt Shenoi" />
 
-	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="" />
-	<meta property="og:image" content="" />
-	<meta property="og:url" content="" />
-	<meta property="og:site_name" content="" />
-	<meta property="og:description" content="" />
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
 	<!--Favicons-->
-	<link href=http://devdutt.ga/images/favicon-32x32.png rel=icon sizes=32x32 type=image/png>
-	<link href=http://devdutt.ga/images/favicon-16x16.png rel=icon sizes=16x16 type=image/png>
+	<link href=http://devdutt.ga/images/favicon.png rel=icon sizes=500x500 type=image/png>
+	<link href=http://devdutt.ga/images/favicon.ico rel=icon sizes=16x16 type=image/png>
 
 	<!--Google Font-->
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
