--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<!--Favicons-->
 	<link href=http://devdutt.ga/images/favicon.png rel=icon sizes=500x500 type=image/png>
-	<link href=http://devdutt.ga/images/favicon.ico rel=icon sizes=16x16 type=image/png>
+	<link href=http://devdutt.ga/images/favicon.ico rel=icon sizes=16x16 type=image/ico>
 
 	<!--Google Font-->
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800" rel="stylesheet">
