--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
 					</div>
 				</div>
 				<div class="fh5co-entry padding">
+					<img src="https://cdn-images-1.medium.com/max/800/1*2obRuYH2tRBz0NxszMjNFg.png" alt="Command Line">
+					<div>
+						<span class="fh5co-post-date">September 14, 2016</span>
+						<h2><a href="https://medium.com/geekletter/codes-are-magic-spells-7197dd63e6b1#.5m71j2r5v">Codes are Magic spells</a></h2>
+						<p>…the Command line is your wand and Algorithms your signature.</p>
+					</div>
+				</div>
+				<div class="fh5co-entry padding">
 					<img src="images/acpng.jpg" alt="Building a C++ Application to cheat the readings">
 					<div>
 						<span class="fh5co-post-date">July 16, 2016</span>
@@ -90,7 +98,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
