--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BEARly Speaking | With Devdutt Shenoi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="My blog on anything that catches my imagination, in the coding world and some..." />
-    <meta name="keywords" content="Devdutt Shenoi, bearly speaking, coding, tutorials, web development" />
+    <meta name="description" content="Devdutt blogs about anything that intrigues him, not only in the coding world, but some..." />
+    <meta name="keywords" content="Devdutt, Shenoi, bearly speaking, coding, tutorials, web development" />
     <meta name="author" content="Devdutt Shenoi" />
 
     <!--Favicons-->
