--- a/index.html
+++ b/index.html
@@ -112,4 +112,19 @@
             </div>
         </div>
     </div>
+    <div class="card">
+        <div class="wrapper" style="background :linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/cricket.jpg)!important">
+            <div class="header">
+                <div class="date">February 2, 2017</div>
+            </div>
+            <div class="data">
+                <div class="content">
+                    <span class="author">Devdutt Shenoi</span>
+                    <h1 class="title"><a href="articles/cricket.html">Cricket a history</a></h1>
+                    <p class="text">Built with Dhananjay on Prezi.</p>
+                    <a href="articles/cricket.html" class="button">Read more</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
