changes in structure

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!Doctype html>
+<html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>BEARly Speaking | With Devdutt Shenoi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Devdutt blogs about anything that intrigues him, not only in the coding world, but some..." />
+    <meta name="description" content="Devdutt blogs about anything that intrigues him, not only in the coding world, but some..."
+    />
     <meta name="keywords" content="Devdutt, Shenoi, bearly speaking, coding, tutorials, web development" />
     <meta name="author" content="Devdutt Shenoi" />
 
@@ -30,9 +34,9 @@
 
     <!--Google Analytics-->
     <script>
-        (function(i, s, o, g, r, a, m) {
+        (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
+            i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
             a = s.createElement(o),
@@ -46,85 +50,76 @@
         ga('send', 'pageview');
     </script>
     <style media="screen">
-    * {
-        box-sizing: border-box;
-    }
-    a {
-        text-decoration: none;
-    }
+        * {
+            box-sizing: border-box;
+        }
 
-    h1 {
-        font-family: "Open Sans", sans-serif;
-        font-weight: 300;
-    }
+        a {
+            text-decoration: none;
+        }
+
+        h1 {
+            font-family: "Open Sans", sans-serif;
+            font-weight: 300;
+        }
     </style>
 </head>
-<div id="fh5co-aside" style="background-image: url(images/cover.jpg)">
-  <div class="overlay"></div>
-  <div class="featured">
-    <span>Bio</span>
-    <h2><a href="http://devdutt.ga">Devdutt</a> here is a Student, Programmer, Blogger, Photographer and what not..</h2>
-  </div>
-</div>
-<div class="row">
-    <div class="card">
-        <div class="wrapper" style="background :linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/accpp.jpg)!important">
-            <div class="header">
-                <div class="date">JULY 16, 2016</div>
+
+<body>
+    <div id="fh5co-aside" style="background-image: url(images/cover.jpg)">
+        <div class="overlay"></div>
+        <div class="featured">
+            <span>Bio</span>
+            <h2><a href="http://devdutt.ga">Devdutt</a> here is a Student, Programmer, Blogger, Photographer and what not..</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="card">
+            <div class="wrapper" style="background :linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/accpp.jpg)!important">
+                <div class="header">
+                    <div class="date">JULY 16, 2016</div>
+                </div>
+                <div class="data">
+                    <div class="content">
+                        <span class="author">Devdutt Shenoi</span>
+                        <h1 class="title"><a href="articles/cpp_chatbot.html">Building a C++ Application to cheat the readings</a></h1>
+                        <p class="text">Breakneck speed programming and the law breaker.</p>
+                        <a href="articles/ac_sonometer.html" class="button">Read more</a>
+                    </div>
+                </div>
             </div>
-            <div class="data">
-                <div class="content">
-                    <span class="author">Devdutt Shenoi</span>
-                    <h1 class="title"><a href="articles/cpp_chatbot.html">Building a C++ Application to cheat the readings</a></h1>
-                    <p class="text">Breakneck speed programming and the law breaker.</p>
-                    <a href="articles/ac_sonometer.html" class="button">Read more</a>
+        </div>
+        <div class="card">
+            <div class="wrapper" style="background:linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/console.jpg)!important">
+                <div class="header">
+                    <div class="date">SEPTEMBER 14, 2016</div>
+                </div>
+                <div class="data">
+                    <div class="content">
+                        <span class="author">Devdutt Shenoi</span>
+                        <h1 class="title"><a href="https://geekhub.ga/codes-are-magic-spells-7197dd63e6b1#.pj5fpav1l">Codes are Magic spells...</a></h1>
+                        <p class="text">…the Command line is your wand and Algorithms your signature.</p>
+                        <a href="https://geekhub.ga/codes-are-magic-spells-7197dd63e6b1#.pj5fpav1l" class="button">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="wrapper" style="background:linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/cppbot.jpg)!important">
+                <div class="header">
+                    <div class="date">OCTOBER 28, 2016</div>
+                </div>
+                <div class="data">
+                    <div class="content">
+                        <span class="author">Devdutt Shenoi</span>
+                        <h1 class="title"><a href="articles\cpp_chatbot.html">How to build a Chatbot in C++</a></h1>
+                        <p class="text">Mixing my love for AI and the CS sylabus in school.</p>
+                        <a href="articles\cpp_chatbot.html" class="button">Read more</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="card">
-        <div class="wrapper" style="background:linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/console.jpg)!important">
-            <div class="header">
-                <div class="date">SEPTEMBER 14, 2016</div>
-            </div>
-            <div class="data">
-                <div class="content">
-                    <span class="author">Devdutt Shenoi</span>
-                    <h1 class="title"><a href="https://geekhub.ga/codes-are-magic-spells-7197dd63e6b1#.pj5fpav1l">Codes are Magic spells...</a></h1>
-                    <p class="text">…the Command line is your wand and Algorithms your signature.</p>
-                    <a href="https://geekhub.ga/codes-are-magic-spells-7197dd63e6b1#.pj5fpav1l" class="button">Read more</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="wrapper" style="background:linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/cppbot.jpg)!important">
-            <div class="header">
-                <div class="date">OCTOBER 28, 2016</div>
-            </div>
-            <div class="data">
-                <div class="content">
-                    <span class="author">Devdutt Shenoi</span>
-                    <h1 class="title"><a href="articles\cpp_chatbot.html">How to build a Chatbot in C++</a></h1>
-                    <p class="text">Mixing my love for AI and the CS sylabus in school.</p>
-                    <a href="articles\cpp_chatbot.html" class="button">Read more</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="card">
-        <div class="wrapper" style="background :linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(images/cricket.jpg)!important">
-            <div class="header">
-                <div class="date">February 2, 2017</div>
-            </div>
-            <div class="data">
-                <div class="content">
-                    <span class="author">Devdutt Shenoi</span>
-                    <h1 class="title"><a href="articles/cricket.html">Cricket a history</a></h1>
-                    <p class="text">Built with Dhananjay on Prezi.</p>
-                    <a href="articles/cricket.html" class="button">Read more</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+</body>
+
+</html>
