restructure with jekyll and OMline

--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 
 <title>
   
-    BEARly Speaking &middot; because we are coding!
+    404: Page not found &middot; 
   
 </title>
 
@@ -22,21 +22,21 @@
 <!--Links-->
 
 
-<link rel="canonical" href="http://localhost:9926/">  
+<link rel="canonical" href="http://localhost:9926/404.html">  
 
 <!-- Twitter card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@DevduttShenoi">
 <meta name="twitter:creator" content="@DevduttShenoi">
-<meta name="twitter:title" content="Home">
+<meta name="twitter:title" content="404: Page not found">
 <meta name="twitter:description" content="Devdutt blogs about anything that intrigues him, not only in the coding world, but some...">
 <meta name="twitter:image" content="http://localhost:9926/">
-<meta name="twitter:url" content="http://localhost:9926/">
+<meta name="twitter:url" content="http://localhost:9926/404.html">
 
 <!-- Open graph -->
-<meta property="og:title" content="Home">
+<meta property="og:title" content="404: Page not found">
 <meta property="og:type" content="website">
-<meta property="og:url" content="http://localhost:9926/">
+<meta property="og:url" content="http://localhost:9926/404.html">
 <meta property="og:image" content="http://localhost:9926/">
 <meta property="og:description" content="Devdutt blogs about anything that intrigues him, not only in the coding world, but some...">
 <meta property="og:site_name" content="BEARly Speaking">
@@ -102,32 +102,10 @@
 
 <body>
 
-    <div id="fh5co-aside" style="background-image: url(/images//cover.jpg)">
-    <div class="overlay"></div>
-    <div class="featured">
-      <span>Bio</span>
-      <h2><a href="http://devdutt.ga">Devdutt</a> here is a Student, Programmer, Blogger, Photographer and what not..</h2>
-    </div>
-  </div>
-  <div class="row">
-    
-    <div class="card">
-        <div class="wrapper" style="background :linear-gradient(to right, rgba(0,0,0,0.51) 0%, rgba(19,19,19,0.51) 0%, rgba(43,43,43,0.5) 100%), url(/images/thumb/acpng.jpg)!important">
-            <div class="header">
-                <div class="date">16 Jul 2016</div>
-            </div>
-            <div class="data">
-                <div class="content">
-                    <span class="author">Devdutt Shenoi</span>
-                    <h1 class="title"><a href="/cpp/16-07/Building-a-C++-application-to-cheat-the-readings/">Building a C++ Application to cheat the readings</a></h1>
-                    <p class="text">Breakneck speed programming and the law breaker..</p>
-                    <a href="/cpp/16-07/Building-a-C++-application-to-cheat-the-readings/" class="button">Read more</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    
-  </div>
+  <div class="page">
+  <h1 class="page-title">404: Page not found</h1>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="//">Head back home</a> to try finding it again.</p>
+</div>
 
 
 </body>
