--- a/16-09/codes-are-magic-spells/index.html
+++ b/16-09/codes-are-magic-spells/index.html
@@ -11,7 +11,7 @@
 
 <title>
   
-    Codes are Magic spells... &middot; 
+    Codes are Magic spells... &middot; BEARly Speaking
   
 </title>
 
@@ -58,8 +58,6 @@
   
 
 
-<!--Google Font-->
-<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800 " rel="stylesheet ">
 <!-- Animate.css -->
 <link rel="stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css ">
 <!-- Bootstrap  -->
