--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
 
 <title>
   
-    404: Page not found &middot; 
+    404: Page not found &middot; BEARly Speaking
   
 </title>
 
@@ -47,8 +47,6 @@
 
 
 
-<!--Google Font-->
-<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800 " rel="stylesheet ">
 <!-- Animate.css -->
 <link rel="stylesheet " href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css ">
 <!-- Bootstrap  -->
@@ -100,7 +98,7 @@
 
 </head>
 
-<body>
+<body class="single">
 
   <div class="page">
   <h1 class="page-title">404: Page not found</h1>
