--- a/cpp/16-10/Howto-build-Chatbot-C++/index.html
+++ b/cpp/16-10/Howto-build-Chatbot-C++/index.html
@@ -147,7 +147,7 @@
             <div>
 						<h3>Program file</h3>
 						<h4>Header files</h4>
-						<pre>#include &#60;iostream&#62;
+						<pre class="prettyprint lang-cpp">#include &#60;iostream&#62;
 #include &#60;string.h&#62;
 #include &#60;stdlib.h&#62;
 #include &#60;stdio.h&#62;
