--- a/cpp/16-10/Howto-build-Chatbot-C++/index.html
+++ b/cpp/16-10/Howto-build-Chatbot-C++/index.html
@@ -120,7 +120,7 @@
       <div class="overlay"></div>
       <nav role="navigation">
         <ul>
-          <li><a href="/"><i class="icon-home"></i></a></li>
+          <li><a href="/"><i class="icon-home"></i>&#8962;</a></li>
         </ul>
       </nav>
       <div class="page-title">
