--- a/cpp/16-07/Building-a-C++-application-to-cheat-the-readings/index.html
+++ b/cpp/16-07/Building-a-C++-application-to-cheat-the-readings/index.html
@@ -117,7 +117,7 @@
       <div class="overlay"></div>
       <nav role="navigation">
         <ul>
-          <li><a href="/"><i class="icon-home"></i></a></li>
+          <li><a href="/"><i class="icon-home"></i>&#8962;</a></li>
         </ul>
       </nav>
       <div class="page-title">
