--- a/tldr/17-09/TLDR-Artificial-Intelligence/index.html
+++ b/tldr/17-09/TLDR-Artificial-Intelligence/index.html
@@ -159,9 +159,12 @@
 						<p>Basically, they are all the same. AI is infact a power-set of all the jargon I threw up there. Deep Learning(DL) is
 							a sub-set of AI which deals with the field of data science and finding patterns in large data, it also happens to
 							be the sub-set of Machine Learning(ML) which deals with development of programs for computers to learn. All of this
-							teaching and learning process is from patterns which are inherent in data. So, in an example: ''' a learning agent
-							'AlphaGo' => played the game Go, thought to it by a Machine Learning Algorithm, specifically a Neural Network(NN)
-							which so happens to be a Deep Learning method. ''' This all comes within AI, don't worry, it gets easy.
+							teaching and learning process is from patterns which are inherent in data. So, in an example:
+							<blockquote class="blockquote">
+								a learning agent 'AlphaGo' => played the game Go, thought to it by a Machine Learning Algorithm, specifically a Neural Network(NN)
+							        which so happens to be a Deep Learning method.
+							</blockquote>
+							This all comes within AI, don't worry, it gets easy.
 							<a href="https://www.youtube.com/watch?v=xN1d3qHMIEQ"><img src="https://storage.googleapis.com/deepmind-live-cms-alt/images/WechatIMG303.width-1500_wKMftX1.jpg" alt="Deep Mind by Google" /></a></p>
 
 						<h5>Is Artificial General Intelligence, dangerous</h5>
