--- a/16-09/codes-are-magic-spells/index.html
+++ b/16-09/codes-are-magic-spells/index.html
@@ -97,8 +97,8 @@
   ga('send', 'pageview');
 </script>
 
-  <meta http-equiv="refresh" content="0; url=https://geekhub.ga/codes-are-magic-spells-7197dd63e6b1#.pj5fpav1l">
-  <link rel="canonical" href="https://geekhub.ga/codes-are-magic-spells-7197dd63e6b1#.pj5fpav1l" />
+  <meta http-equiv="refresh" content="0; url="">
+  <link rel="canonical" href="" />
 </head>
 
 <body>
